--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Species Lifespan Interventions</title>
+    <title>Lifespan Charts</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -141,7 +141,6 @@
 
             // Populate dropdowns
             const speciesDropdown = d3.select("#speciesDropdown");
-            const strainDropdown = d3.select("#strainDropdown");
             const genderDropdown = d3.select("#genderDropdown");
 
             // Add "All" option
