--- a/index.html
+++ b/index.html
@@ -2,24 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
     <title>Lifespan Charts</title>
     <style>
-        body {
+        html, body {
+            overflow-x: auto;
+            overflow-y: auto;
+            width: 100%;
+            height: 100%;
             font-family: Arial, sans-serif;
         }
         #charts-container, #table-container {
             display: flex;
-            justify-content: center;
             flex-direction: column;
             align-items: center;
-            width: 90%;
+            width: 100%;
             margin-top: 20px;
         }
         .filter-container {
             display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
+            flex-direction: column;
+            align-items: stretch;
             gap: 15px;
             margin: 20px;
         }
@@ -55,6 +58,21 @@
             pointer-events: none;
             visibility: hidden;
             z-index: 10;
+        }
+        @media only screen and (max-width: 600px) {
+            #charts-container, #table-container {
+                width: 95%;
+            }
+            table, th, td {
+                font-size: 12px;
+            }
+            .filter-container {
+                flex-direction: column;
+                gap: 10px;
+            }
+            h1 {
+                font-size: 1.5rem;
+            }
         }
     </style>
     <script src="https://d3js.org/d3.v7.min.js"></script>
@@ -160,9 +178,9 @@
 
             // Function to render charts
             function renderChart(containerId, lifespanType) {
-                const width = 800, height = 400, margin = {top: 20, right: 30, bottom: 40, left: 50};
+                const width = Math.min(800, window.innerWidth * 0.9), height = 400, margin = {top: 20, right: 30, bottom: 40, left: 50};
                 const svg = d3.select(`#${containerId}`).append("svg")
-                    .attr("width", width)
+                    .attr("width", "100%")
                     .attr("height", height);
 
                 const x = d3.scaleBand().range([margin.left, width - margin.right]);
