fix size on desktop

--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            width: 100%;
+            width: 90%;
+            max-width: 1200px;
             margin-top: 20px;
         }
         .filter-container {
             display: flex;
-            flex-direction: column;
-            align-items: stretch;
+            flex-direction: row;
+            align-items: center;
             gap: 15px;
             margin: 20px;
         }
@@ -178,9 +179,9 @@
 
             // Function to render charts
             function renderChart(containerId, lifespanType) {
-                const width = Math.min(800, window.innerWidth * 0.9), height = 400, margin = {top: 20, right: 30, bottom: 40, left: 50};
+                const width = Math.min(1200, window.innerWidth * 0.9), height = 400, margin = {top: 20, right: 30, bottom: 40, left: 50};
                 const svg = d3.select(`#${containerId}`).append("svg")
-                    .attr("width", "100%")
+                    .attr("width", width)
                     .attr("height", height);
 
                 const x = d3.scaleBand().range([margin.left, width - margin.right]);
