--- a/index.html
+++ b/index.html
@@ -6,17 +6,13 @@
     <title>Lifespan Charts</title>
     <style>
         html, body {
-            overflow-x: auto;
+            overflow-x: hidden;
             overflow-y: auto;
             width: 100%;
             height: 100%;
             font-family: Arial, sans-serif;
         }
-        #charts-container, #table-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: 90%;
+        #charts-container, #table-container { display: flex; flex-direction: column; align-items: center; width: 100%; max-width: 1200px; margin-top: 20px;
             max-width: 1200px;
             margin-top: 20px;
         }
@@ -30,8 +26,7 @@
         .filter {
             margin-bottom: 10px;
         }
-        table {
-            width: 100%;
+        table { width: auto; margin-left: auto; margin-right: auto; border-collapse: collapse; margin-top: 20px;
             border-collapse: collapse;
             margin-top: 20px;
         }
