--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 </head>
 <body>
 
-    <h1>Species Lifespan Interventions</h1>
+    <h1>Lifespan Charts</h1>
 
     <!-- Filter dropdowns for all columns -->
     <div class="filter-container">
