--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 </head>
 <body>
 
-    <h1>Lifespan Charts</h1>
+    <h1>Species Lifespan Interventions</h1>
 
     <!-- Filter dropdowns for all columns -->
     <div class="filter-container">
@@ -187,7 +187,7 @@
                 const x = d3.scaleBand().range([margin.left, width - margin.right]);
                 const y = d3.scaleLinear().range([height - margin.bottom, margin.top]);
 
-                svg.append("g").attr("class", "x-axis").attr("transform", `translate(0,${height - margin.bottom})`);
+                
                 svg.append("g").attr("class", "y-axis").attr("transform", `translate(${margin.left},0)`);
 
                 function updateChart(filteredData) {
@@ -201,8 +201,7 @@
                     const minValue = d3.min(filteredData, d => d[lifespanType]);
                     y.domain([Math.min(0, minValue), d3.max(filteredData, d => d[lifespanType])]);
 
-                    svg.select(".x-axis").transition().call(d3.axisBottom(x)).selectAll("text").attr("dy", ".35em")
-                        .style("text-anchor", "end").attr("transform", "rotate(-45)");
+                    
 
                     svg.select(".y-axis").transition().call(d3.axisLeft(y));
 
