--- a/index.html
+++ b/index.html
@@ -97,10 +97,12 @@
     <!-- Charts -->
     <div id="charts-container">
         <div id="chart-median">
-            <h3>Median Lifespan (%)</h3>
+            
+<p style="font-size: 0.9em;">Hover over bar for details</p>
         </div>
         <div id="chart-max">
-            <h3>Max Lifespan (%)</h3>
+            
+<p style="font-size: 0.9em;">Hover over bar for details</p>
         </div>
     </div>
 
