Revert "add hover"
This reverts commit 2cd436bc20ca9be701de733f796b78a39c044b3c.

--- a/index.html
+++ b/index.html
@@ -97,12 +97,10 @@
     <!-- Charts -->
     <div id="charts-container">
         <div id="chart-median">
-            
-<p style="font-size: 0.9em;">Hover over bar for details</p>
+            <h3>Median Lifespan (%)</h3>
         </div>
         <div id="chart-max">
-            
-<p style="font-size: 0.9em;">Hover over bar for details</p>
+            <h3>Max Lifespan (%)</h3>
         </div>
     </div>
 
