--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
             width: 100%;
             height: 100%;
             font-family: Arial, sans-serif;
+            background-color: #121212;
+            color: #e0e0e0;
         }
-        #charts-container, #table-container { display: flex; flex-direction: column; align-items: center; width: 100%; max-width: 1200px; margin-top: 20px;
+        #charts-container, #table-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
             max-width: 1200px;
             margin-top: 20px;
         }
@@ -26,17 +32,22 @@
         .filter {
             margin-bottom: 10px;
         }
-        table { width: auto; margin-left: auto; margin-right: auto; border-collapse: collapse; margin-top: 20px;
+        table {
+            width: auto;
+            margin-left: auto;
+            margin-right: auto;
             border-collapse: collapse;
             margin-top: 20px;
+            background-color: #1e1e1e;
         }
         table, th, td {
-            border: 1px solid #ddd;
+            border: 1px solid #444;
             padding: 8px;
             text-align: left;
         }
         th {
-            background-color: #f2f2f2;
+            background-color: #333;
+            color: #e0e0e0;
         }
         tr.highlight {
             background-color: #ffeb99; /* Light yellow background for highlight */
@@ -47,10 +58,11 @@
         }
         .tooltip {
             position: absolute;
-            background-color: white;
-            border: 1px solid #ccc;
+            background-color: #333;
+            border: 1px solid #888;
             padding: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            color: #e0e0e0;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
             pointer-events: none;
             visibility: hidden;
             z-index: 10;
@@ -240,7 +252,7 @@
                         .attr("y", d => y(Math.max(0, d[lifespanType]))) // Adjust y to handle negative values
                         .attr("height", d => Math.abs(y(0) - y(d[lifespanType]))) // Calculate height for negative values
                         .attr("width", x.bandwidth())
-                        .attr("fill", "steelblue")
+                        .attr("fill", d => d.Gender === 'Male' ? 'steelblue' : 'pink')
                         .on("mouseover", function(event, d) {
                             d3.select(this).attr("fill", "darkorange");
 
@@ -260,7 +272,7 @@
                                    .style("left", (event.pageX + 10) + "px");
                         })
                         .on("mouseout", function() {
-                            d3.select(this).attr("fill", "steelblue");
+                            d3.select(this).attr("fill", d => d.Gender === 'Male' ? 'steelblue' : 'pink');
                             tooltip.style("visibility", "hidden");
                         })
                         .merge(bars)
