--- a/index.html
+++ b/index.html
@@ -214,7 +214,8 @@
                     .attr("y", margin.left / 2 - 10)
                     .style("text-anchor", "middle")
                     .style("font-size", "12px")
-                    .text(lifespanType);
+                    .attr("fill", "#e0e0e0")
+                    .text(`Increase in ${lifespanType}`);
 
                 function updateChart(filteredData) {
                     // Sort the data based on the lifespan type in descending order
