--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
                     .attr("transform", `rotate(-90)`)
                     .attr("x", -height / 2)
                     .attr("y", margin.left / 2 - 10)
+                    .attr("fill", "#e0e0e0")
                     .style("text-anchor", "middle")
                     .style("font-size", "12px")
                     .text(`% Lifespan Increase (${lifespanType})`);
