Add MPD data, attribution text

--- a/index.html
+++ b/index.html
@@ -358,5 +358,11 @@
             }
         });
     </script>
+
+    <!-- Data Attribution -->
+    <footer style="margin-top: 20px; text-align: center;">
+        Data from: <a href="https://phenome.jax.org/projects/ITP1" target="_blank">Mouse Phenome Database</a>, <a href="https://masteronething.com/LID" target="_blank">Rapamycin Longevity Lab</a>
+    </footer>
+
 </body>
 </html>
