color of control

--- a/survival/index.html
+++ b/survival/index.html
@@ -251,7 +251,7 @@
                                 datasets.push({
                                     label: `Control Male (${compareYear})`,
                                     data: compareControlSurvivalMale,
-                                    borderColor: 'lightgray',
+                                    borderColor: 'lightblue',
                                     fill: false,
                                     pointRadius: 0,
                                     stepped: true,
@@ -262,7 +262,7 @@
                                 datasets.push({
                                     label: `Control Female (${compareYear})`,
                                     data: compareControlSurvivalFemale,
-                                    borderColor: 'gray',
+                                    borderColor: 'pink',
                                     fill: false,
                                     pointRadius: 0,
                                     stepped: true,
